<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="24dp"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/card_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_number"
        android:maxLength="16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.274"
        android:inputType="number"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/card_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_holder"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_number"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/card_cvv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLength="3"
        android:hint="@string/card_cvv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintEnd_toStartOf="@id/card_exp"
        app:layout_constraintTop_toBottomOf="@id/card_holder"
        android:importantForAutofill="no"
        android:inputType="number" />

    <EditText
        android:id="@+id/card_exp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:maxLength="5"
        android:hint="@string/card_exp"
        app:layout_constraintStart_toEndOf="@id/card_cvv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_holder"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Button
        android:id="@+id/payBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay"
        app:layout_constraintTop_toBottomOf="@id/card_cvv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>